# order-routing-gateway

./: README.md  pyproject.toml
samples/: btcusdt_orders.jsonl  btcusdt_ticks.jsonl
src/order_routing_gateway/: __init__.py  __main__.py  gateway.py  http_transport.py  ingest.py  live_router.py  models.py  paper_router.py  pipeline.py  protocols.py
src/order_routing_gateway/adapters/: __init__.py  binance.py  coinbase.py
tests/: test_adapters.py  test_live_router.py  test_models.py  test_paper_router.py  test_pipeline.py
