[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "order-routing-gateway"
version = "0.1.0"
description = "Exchange-agnostic gateway that routes internal orders to live APIs or paper trading."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "juanmmm21" }]
keywords = ["trading", "order-routing", "gateway", "exchange", "paper-trading", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
order-routing-gateway = "order_routing_gateway.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/order_routing_gateway"]

[tool.hatch.build.targets.sdist]
include = ["src/order_routing_gateway", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
